# jira-mcp-server

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CURSOR_INTEGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  ONE_COMMAND_INSTALL.md  README.md  SUMMARY.md  claude_config_example.json  pyproject.toml  server.py  setup.sh
