[project]
name = "jira-mcp-server"
version = "1.0.0"
description = "JIRA operations via Model Context Protocol"
authors = [
    { name = "Your Organization", email = "team@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
jira-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
